--- a/Document.html
+++ b/Document.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <!-- header başlangıç -->
-
+<div>
+    <h1>Welcome</h1>
+</div>
     <header class="landing-page">
         <div class="header-logo">
             <svg width="35" height="24" viewBox="0 0 35 24" fill="none" xmlns="http://www.w3.org/2000/svg">
