Style.css file created

--- a/Document.html
+++ b/Document.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="file:///C:/Users/MAKISHA%20SAMARTHINI/OneDrive/Documents/Task1/variables.css">
     <link rel="stylesheet" href="file:///C:/Users/MAKISHA%20SAMARTHINI/OneDrive/Documents/Task1/components.css">
-    <link rel="stylesheet" href="./Document_files/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <!-- header başlangıç -->
